package sneakers;
/**
 * <li>Уличные</li>
 * <li>Беговые</li>
 * <li>Футбольные</li>
 */
public enum SneakersType {
    Street,
    Running,
    Football,
}

